refactor: Finish initialization of Angular2 console with home and API management page

--- a/admin/console/app/app.html
+++ b/admin/console/app/app.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
     Copyright (C) 2015 The Gravitee team (http://gravitee.io)
@@ -16,19 +15,11 @@
     limitations under the License.
 
 -->
-<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
-  <id>bin</id>
+<section>
+  <nav>
+    <a router-link="home">Home</a>
+    <a router-link="apis">APIs</a>
+  </nav>
 
-    <formats>
-        <format>zip</format>
-    </formats>
-    <fileSets>
-        <fileSet>
-            <outputDirectory>/</outputDirectory>
-            <directory>dist/prod</directory>
-        </fileSet>
-    </fileSets>
-</assembly>
-
+  <router-outlet></router-outlet>
+</section>
