style: refactor api documentation page and set white background for the content app

--- a/src/index.html
+++ b/src/index.html
@@ -48,21 +48,23 @@
 
     <div layout="row" style="height:100%;">
       <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-				<md-toolbar class="md-tall md-hue-2 md-whiteframe-z2">
-				   <span flex></span>
-        	 <div layout="column" class="md-toolbar-tools-bottom inset">
-						 <div ng-if="!authenticated" layout="row">
-						 	 <img src="../assets/images/GRAVITEE_LOGOclair-04.png" width="64px" height="64px" />
-							 <h3>Gravitee.io</h3>
-						 </div>
-						 <div ng-if="authenticated">
-		           <ng-md-icon ng-if="authenticated" icon="account_circle" size="64" style="fill: white;"></ng-md-icon>
-		        	 <span></span>
-		           <div>Firstname Lastname</div>
-		           <div>email@domainname.com</div>
-						 </div>
-           </div>
-				 </md-toolbar>
+		<md-toolbar class="md-tall md-hue-2 md-whiteframe-z2">
+		  <span flex></span>
+          <div layout="column" class="md-toolbar-tools-bottom inset">
+			<div ng-if="authenticated" layout="row">
+			  <img src="../assets/images/GRAVITEE_LOGOclair-04.png" width="64px" height="64px" />
+			  <h3>Gravitee.io</h3>
+			  </div>
+				 <div ng-if="!authenticated">
+		           <ng-md-icon icon="account_circle" size="64" style="fill: white;"></ng-md-icon>
+		        	<span></span>
+		            <a href="#/profile" style="color:white">
+			            <div>Firstname Lastname</div>
+			            <div>email@domainname.com</div>
+		            </a>
+				</div>
+             </div>
+		 </md-toolbar>
          <md-list>
            <md-subheader>API Management</md-subheader>
            <md-item>
