feat(application): add default files for application part (controller + view + css)

--- a/src/index.html
+++ b/src/index.html
@@ -88,12 +88,12 @@
             </a>
           </md-item>
           <md-item>
-             <a href="#/documentation">
+             <a href="#/applications">
                  <md-item-content md-ink-ripple layout="row" layout-align="start center">
                  <div class="inset">
-                   <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+                   <ng-md-icon icon="list"></ng-md-icon>
                  </div>
-                 <div class="inset">Documentation</div>
+                 <div class="inset">Applications</div>
                </md-item-content>
             </a>
           </md-item>
