feat(home) : refactor landing page

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
     <![endif]-->
 
     <div layout="row" style="height:100%;">
-      <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+      <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
 		<md-toolbar class="md-tall md-hue-2 md-whiteframe-z2">
 		  <span flex></span>
           <div layout="column" class="md-toolbar-tools-bottom inset">
