--- a/src/index.html
+++ b/src/index.html
@@ -49,24 +49,23 @@
     <div layout="row" style="height:100%;">
       <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
 		<md-toolbar class="md-tall md-hue-2 md-whiteframe-z2">
-		  <span flex></span>
           <div layout="column" class="md-toolbar-tools-bottom inset">
-			<div ng-if="!authenticated" layout="row">
+			<div ng-if="!authenticated">
 			  <img src="../assets/images/GRAVITEE_LOGOclair-04.png" width="64px" height="64px" />
 			  <h3>Gravitee.io</h3>
 			  </div>
-				 <div ng-if="authenticated">
+
+
+				 <a href="#/profile" ng-if="authenticated" layout="row">
 		           <ng-md-icon icon="account_circle" size="64" style="fill: white;"></ng-md-icon>
-		        	<span></span>
-		            <a href="#/profile" style="color:white">
-			            <div>Firstname Lastname</div>
-			            <div>email@domainname.com</div>
-		            </a>
-				</div>
+           <div layout="column">
+             <span flex></span>
+             <span style="color:white;">Firstname Lastname</span>
+           </div>
+				</a>
              </div>
 		 </md-toolbar>
          <md-list>
-           <md-subheader>API Management</md-subheader>
            <md-item>
              <a href="#/">
                  <md-item-content md-ink-ripple layout="row" layout-align="start center">
