refactor: fix typo

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div layout="row" style="height:100%;">
-      <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
+    <div style="height:100%;">
+      <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
 		<md-toolbar class="md-tall md-hue-2 md-whiteframe-z2">
           <div layout="column" class="md-toolbar-tools-bottom inset">
 			<div ng-if="!authenticated">
