feat(application) : start plugging application services

--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
           </md-item>
         </md-list>
 			</md-sidenav>
-      <md-content>
+      <md-content style="height:100%;">
         <header>
           <gravitee-navbar />
         </header>
