refactor: switch to https

--- a/src/index.html
+++ b/src/index.html
@@ -155,9 +155,9 @@
     <!-- endbuild -->
 
 		<!-- Angular Material icons -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
     <!-- DataTables -->
-    <script src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js"></script>
 		<!-- raml console dependencies -->
 		<script src="assets/api-console/distribution/scripts/api-console-vendor.js" type="text/javascript" ></script>
