initial implementation for highcharts

--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,7 @@
     <script src="https://cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js"></script>
 		<!-- raml console dependencies -->
 		<script src="assets/api-console/distribution/scripts/api-console-vendor.js" type="text/javascript" ></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="assets/api-console/distribution/scripts/api-console.js" type="text/javascript"></script>
 		<script type="text/javascript">
 		  $.noConflict();
