refactor: better route management for Application + split html/js files

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
              </a>
            </md-item>
           <md-item>
-             <a href="#/applications">
+             <a href="" ui-sref="applications.thumb">
                  <md-item-content md-ink-ripple layout="row" layout-align="start center">
                  <div class="inset">
                    <ng-md-icon icon="list"></ng-md-icon>
