refactor: fix authentication logout problem + add progress bar + load list of APIs on creation success + remove unused pagination + add timeout on http request

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
         <header>
           <gravitee-navbar />
         </header>
+        <md-progress-linear md-mode="buffer" value="{{progressValue}}" md-buffer-value="{{progressValue}}"></md-progress-linear>
 			  <div ui-view></div>
 			</md-content>
     </div>
