refactor: style api page + application page

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 			<div>     	
 				<gravitee-sidenav />
 			</div>     
-      <md-content style="height:100%;">
+      <md-content style="height:100%;" ng-class="{'active':contentIsActive}">
         <header>
           <gravitee-navbar />
         </header>
