fix(event): No message 'API out of sync...' when updating a policy

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 			<div>
 				<gravitee-sidenav />
 			</div>
-      <div style="display: block; height:100%;" ng-class="{'active':contentIsActive}">
+      <div style="display: block; height:100%;" class="main-content" ng-class="{'active':contentIsActive}">
         <header>
           <gravitee-navbar />
         </header>
