refactor: allows to export constants on a 'not uglified/minified' file + upgrade webui version

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="constants.js" type="text/javascript"></script>
+
     <!-- build:js({.tmp/serve,.tmp/partials}) scripts/app.js -->
     <!-- inject:js -->
     <!-- js files will be automatically insert here -->
