--- a/src/portal/home/home.html
+++ b/src/portal/home/home.html
@@ -45,7 +45,7 @@
       </md-autocomplete>
     </div>
   </section>
-  <section id="portal-homepage">
+  <section id="portal-homepage" ng-if="homeCtrl.homepage">
     <gv-page page="homeCtrl.homepage"></gv-page>
   </section>
   <section id="top-apis" class="tall" layout="row" layout-align="center start" flex>
