fix: remove typo for information

--- a/gravitee-apim-console-webui/src/management/configuration/settings.html
+++ b/gravitee-apim-console-webui/src/management/configuration/settings.html
@@ -43,7 +43,7 @@
           <a class="execute" ui-sref="{{$ctrl.settingsMenu.analytics.goTo}}">Analytics</a>
         </li>
         <li class="iterable-item" ng-if="$ctrl.settingsMenu.apiPortalHeader.perm" ui-sref-active="aui-nav-selected">
-          <a class="execute" ui-sref="{{$ctrl.settingsMenu.apiPortalHeader.goTo}}">API Portal Informations</a>
+          <a class="execute" ui-sref="{{$ctrl.settingsMenu.apiPortalHeader.goTo}}">API Portal Information</a>
         </li>
         <li
           class="iterable-item"
