--- a/gravitee-apim-console-webui/src/management/instances/details/environment/instance-environment.html
+++ b/gravitee-apim-console-webui/src/management/instances/details/environment/instance-environment.html
@@ -17,7 +17,7 @@
 -->
 <div class="gravitee-instances-container">
   <div class="gravitee-instances-content">
-    <div class="gravitee-instances-table-title"><ng-md-icon icon="info_outline"></ng-md-icon> Informations</div>
+    <div class="gravitee-instances-table-title"><ng-md-icon icon="info_outline"></ng-md-icon> Information</div>
     <md-table-container>
       <table md-table>
         <tbody md-body>
