--- a/gravitee-apim-console-webui/src/management/application/creation/steps/application-creation-step3.html
+++ b/gravitee-apim-console-webui/src/management/application/creation/steps/application-creation-step3.html
@@ -97,7 +97,7 @@
             >
               <div style="width: 100%">
                 <div flex layout="row">
-                  <h4>Choose <b>Echo</b> plans that suit your business</h4>
+                  <h4>Choose plans that suit your business</h4>
                   <md-tooltip>Close the API</md-tooltip>
                   <span flex></span>
                   <md-button class="md-icon-button" aria-label="Finish">
