fix(console): use material by default, apply bootstrap only if necessary
APIM-223

--- a/gravitee-apim-console-webui/src/index.html
+++ b/gravitee-apim-console-webui/src/index.html
@@ -16,7 +16,7 @@
 
 -->
 <!DOCTYPE html>
-<html class="bootstrap">
+<html>
   <head>
     <meta charset="utf-8" />
     <base href="/" />
@@ -111,7 +111,7 @@
     </script>
   </head>
 
-  <body layout="column">
+  <body layout="column" class="mat mat-typography mat-app-background">
     <p id="BrowserNotSupportedBanner" class="browsehappy" style="display: none">
       You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your
       experience.
