refactor: move old instance-header into subpages

--- a/gravitee-apim-console-webui/src/management/instances/details/instance.html
+++ b/gravitee-apim-console-webui/src/management/instances/details/instance.html
@@ -17,8 +17,5 @@
 -->
 <div class="gravitee-instances-detail">
   <instances-navigation></instances-navigation>
-  <div class="gravitee-instances-detail__content">
-    <instance-header instance="$ctrl.instance"></instance-header>
-    <div ui-view flex class="inset gravitee-instances-detail__content__view"></div>
-  </div>
+  <div ui-view flex class="gravitee-instances-detail__content"></div>
 </div>
