--- a/gravitee-apim-console-webui/src/user/login/login.html
+++ b/gravitee-apim-console-webui/src/user/login/login.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<md-content class="gravitee-no-sidenav-container" gv-theme-element="portal.login" flex>
+<md-content class="gravitee-no-sidenav-container login-container" gv-theme-element="portal.login" flex>
   <div class="login-page">
     <div class="form">
       <div class="gravitee-no-sidenav-header" layout="column">
