--- a/gravitee-apim-console-webui/src/index.html
+++ b/gravitee-apim-console-webui/src/index.html
@@ -16,7 +16,7 @@
 
 -->
 <!DOCTYPE html>
-<html>
+<html class="mat">
   <head>
     <meta charset="utf-8" />
     <base href="/" />
@@ -121,7 +121,7 @@
 
     <div id="loader" ng-show="displayLoader" class="gravitee-splash-screen animate-show-hide"></div>
 
-    <gravitee-navbar></gravitee-navbar>
+    <gravitee-navbar style="height: 54px"></gravitee-navbar>
     <div flex ui-view></div>
     <gv-newsletter-reminder></gv-newsletter-reminder>
     <script src="webcomponents/webcomponents-loader.js"></script>
