--- a/gravitee-apim-console-webui/src/management/configuration/settings.html
+++ b/gravitee-apim-console-webui/src/management/configuration/settings.html
@@ -15,7 +15,8 @@
     limitations under the License.
 
 -->
-<div flex layout="row">
-  <settings-navigation></settings-navigation>
-  <div class="gv-sub-content" flex layout="column" ui-view></div>
-</div>
+<settings-navigation>
+  <div flex>
+    <div class="gv-sub-content" flex layout="column" ui-view></div>
+  </div>
+</settings-navigation>
