fix: use correct permission to display transfer app ownership section
https://gravitee.atlassian.net/browse/APIM-911
https://github.com/gravitee-io/issues/issues/8455
(cherry picked from commit 9e64b6e2378e7db53e0be44171cc7c41929ef125)

--- a/gravitee-apim-console-webui/src/management/application/details/members/application-members.html
+++ b/gravitee-apim-console-webui/src/management/application/details/members/application-members.html
@@ -113,7 +113,7 @@
     </div>
   </div>
 
-  <div class="gv-form" ng-if="$ctrl.isAllowedToTransferOwnership()" permission permission-only="'application-member-u'">
+  <div class="gv-form" ng-if="$ctrl.isAllowedToTransferOwnership()">
     <h2>Transfer ownership</h2>
     <div class="gv-form-content" layout="column">
       <p>Give full access to this application to an other user.</p>
